Updated files to avoid stretching

--- a/style.css
+++ b/style.css
@@ -1,67 +1,83 @@
-*{
-    margin: 0;
-    padding: 0;
+/* RESET + FONTS */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap');
 
-body{
-    background-color: rgb(10,25,47);
+body {
+  background-color: rgb(10,25,47);
+  color: white;
+  font-family: 'Poppins', sans-serif;
 }
 
-.navbar{
-    display: flex;
-    flex-direction: row;
+/* NAVBAR */
+.navbar {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 30px 60px;
 }
 
-.name{
-    color: white;
-    margin-left: 45px;
-    margin-top: 30px;
-    font-weight: 700;
-    font-family: 'Poppins', sans-serif;
-    font-size: 24px;
+.name {
+  font-weight: 700;
+  font-size: 24px;
 }
 
-
-.navbar-contents{
-    color: white;
-    margin-top: 30px;
-    font-size: 16px;
-    font-weight: 500;
-    font-family: 'Poppins', sans-serif;
-    text-decoration: none;
-    margin-left: 300px;
-    margin-top: 40px;
+.navbar-contents a {
+  text-decoration: none;
+  color: white;
+  font-weight: 500;
+  margin-left: 40px;
+  font-size: 16px;
+  transition: color 0.3s;
 }
 
-a {
-    text-decoration: none;
-    padding-left: 40px;
-    color: white;
+.navbar-contents a:hover {
+  color: rgb(0,191,255);
 }
 
-a:hover {
-    color : rgb(0,191,255);
+/* HERO SECTION */
+.hero {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 80px 40px;
 }
 
-
-.main{
-    margin-top: 100px;
-    margin-left: 50px;
-    text-align: left;
-    color: white;
-    font-family: 'Poppins', sans-serif;
-    font-size: 30px;
-    
+.content {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 50px;
+  width: 100%;
+  max-width: 1100px;
 }
 
+.text h1 {
+  font-size: 38px;
+  margin-bottom: 10px;
+}
 
+.text h2 {
+  color: #3FA9F5;
+  font-size: 25px;
+  margin-bottom: 25px;
+}
+
+.text p {
+  font-size: 13px;
+  line-height: 1.6;
+  margin-bottom: 40px;
+  max-width: 650px;
+}
+
+/* BUTTONS */
 .buttons {
   display: flex;
-  justify-content: flex-start; 
-  margin-top: 40px;
-  margin-left: 45px;
+  gap: 15px;
 }
 
 .hire {
@@ -71,6 +87,7 @@ a:hover {
   border: 2px solid rgb(0,191,255);
   border-radius: 5px;
   padding: 8px 20px;
+  cursor: pointer;
 }
 
 .project {
@@ -80,48 +97,44 @@ a:hover {
   border-radius: 5px;
   color: rgb(0,191,255);
   padding: 8px 20px;
-  margin-left: 10px;
+  cursor: pointer;
 }
 
+/* IMAGE */
+.image img {
+  width: 260px;
+  height: auto;
+  border-radius: 12px;
+  object-fit: cover;
+}
 
-.contact {
-  margin-top: 40px;
-  margin-left: 40px;
+/* CONTACT ICONS */
+footer {
   display: flex;
   justify-content: flex-start;
   align-items: center;
-  gap: 25px; 
-  color: rgb(0,191,255);
+  margin: 40px 0 60px 60px;
 }
 
+.contact {
+  display: flex;
+  align-items: center;
+  gap: 25px;
+}
 
 .icon {
-    border: 2px solid rgb(0, 191, 255);
-    width: 25px;
-    height: 25px;
-    border-radius: 50%;
-    color: rgb(0, 191, 255);
-    display: flex; 
-    justify-content: center;
-    align-items: center;
-    text-decoration: none;
-
-}
-
-.content {
+  border: 2px solid rgb(0,191,255);
+  width: 35px;
+  height: 35px;
+  border-radius: 50%;
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 40px; 
+  color: rgb(0,191,255);
+  transition: all 0.3s ease;
 }
 
-.image img {
-  height: 250px;
-  width: 250px;
-  border-radius: 10px;
-  margin: 0;
-  margin-right: 30px;
-  margin-top: 100px;
+.icon:hover {
+  background-color: rgb(0,191,255);
+  color: rgb(10,25,47);
 }
-
-
